--- a/surround.css
+++ b/surround.css
@@ -85,6 +85,7 @@ html {
     height: 84%;
     top: 8%;
     background-color: rgba(138, 87, 50, 0.1);
+    overflow: scroll;
 }
 
 .left {
@@ -304,18 +305,17 @@ html {
     position: absolute;
     display: block;
     bottom: 0%;
-    height: 35%;
-    width: 100%;
+    height: 25%;
+    width: 60%;
     padding: 0%;
     color: black;
     background-color: transparent;
-    text-align: center;
+    text-align: left;
+    padding-left: 25%;
     overflow: hidden;
     white-space: nowrap;
-    font-size: 85%;
+    font-size: 80%;
     vertical-align: bottom;
-
-
 }
 
 /* End of turn icon */
