Refactoring of main.js file
Aim is to start clear out of main.js file  - so that eventually it just handles game set up and game start.
Three files: human.js, automove.js, pirates.js will cover human, computer, and pirate moves.  
* human player move handling moved to new file human.js
* commentary methods moved to new file commentary.js
* building slider elements moved into existing build.js file

--- a/surround.css
+++ b/surround.css
@@ -126,7 +126,7 @@ html {
 }
 
 /* commentary box */
-.commentary {
+.commentaryBox {
     position: fixed;
     text-align: center;
     bottom: -10%;
@@ -142,7 +142,7 @@ html {
     transition: bottom 0.2s ease-in-out;
 }
 
-/* commentary box */
+/* building */
 .building {
     position: fixed;
     text-align: left;
@@ -161,6 +161,7 @@ html {
 
 #firstBuildLine, #secondBuildLine, #thirdBuildLine {
     position: relative;
+    left: 7%;
 }
 
 /* Header slider commentator holder formats*/
