--- a/pieces.css
+++ b/pieces.css
@@ -94,6 +94,12 @@
     z-index: 10;
 }
 
+/* Whirlpool */
+.whirlpool {
+    position: absolute;
+    background-color: transparent;
+    z-index: 10;
+}
 
 
 
